fix line height on h3 due to letters overlapping eachother

--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -1111,7 +1111,7 @@ nav a:hover span {
   color: var(--color-foreground);
   font-size: 2rem;
   padding: 1.5rem 0;
-  line-height: 96%;
+  line-height: 100%;
   letter-spacing: -1.125px;
   font-weight: 700;
 }
